LUCENE-1987: Remove lots of deprecations from analysis package. Undeprecate some Token ctors.
git-svn-id: https://svn.apache.org/repos/asf/lucene/java/trunk@826404 13f79535-47bb-0310-9956-ffa450edef68